--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -125,6 +125,24 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
+
+.filters {
+	display: flex;
+	justify-content: center;
+	gap: 15px;
+	margin-bottom: 45px;
+}
+
+.filters button {
+	border: solid 1px #1D6154;
+	background-color: transparent;
+	border-radius: 60px;
+	color: #1D6154;
+	font-family: 'Syne';
+	font-weight: 700;
+	padding: 5px 20px;
+
+}
 .gallery {
 	width: 100%;
 	display: grid;
@@ -137,6 +155,8 @@ li:hover {
 	width: 100%;
 
 }
+
+
 #contact {
 	width: 50%;
 margin: auto;
