--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -144,7 +144,7 @@ li:hover {
 	cursor: pointer;
 }
 
-.filters button:focus {
+.filters button.active {
 	background-color: #1D6154;
 	color: rgb(255,255,255);
 
