--- a/FrontEnd/assets/login.css
+++ b/FrontEnd/assets/login.css
@@ -52,6 +52,7 @@ body {
 	font-family: 'Work Sans';
 	font-size: 14px;
 	background-color: #FFFEF8;
+    height: 80vh;
 }
 
 header {
@@ -63,32 +64,28 @@ header {
 }
 
 main {
-	max-width: 950px;
-	margin: auto;
+	margin:auto;
+    margin-bottom: 275px;
 }
 
-section {
-	margin: 50px 0;
-}
-
-h1{
+h1 {
 	display: flex;
 	flex-direction: column;
 	font-family: 'Syne';
 	font-size: 22px;
 	font-weight: 800;
 	color: #B1663C;
-	gap: 7px;
+    gap: 7px;
+    text-transform: uppercase;
 }
 
 h1 > span {
 	font-family: 'Work Sans';
-	font-size: 10px;
+	font-size:10px;
 	letter-spacing: 0.1em;
-	text-transform: uppercase;
 }
 
-h2{
+h2 {
 	font-family: 'Syne';
 	font-weight: 700;
 	font-size: 30px;
@@ -98,9 +95,9 @@ nav ul {
 	display: flex;
 	align-items: center;
 	list-style-type: none;
-	gap: 40px;
-
+    gap: 40px;
 }
+
 nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
@@ -118,108 +115,38 @@ nav li a:hover {
 	color: #B1663C;
 }
 
-#introduction {
-	display: flex;
-	align-items: center;
-}
-#introduction figure {
-	flex: 1
-}
-#introduction img {
-	display: block;
-	margin: auto;
-	width: 80%;
+nav li:nth-child(3) {
+    font-weight: 600;
 }
 
-#introduction article {
-	flex: 1
+#login {
+	width: 19.7%;
+    margin: 70px auto 0;
 }
-
-#introduction h2 {
-	margin-bottom: 1em;
-}
-
-#introduction p {
-	margin-bottom: 1.25em;
-	font-weight: 400;
-	font-size: 0.875em;
-	line-height: 1.26em;
-	max-width: 404px;
-}
-
-#portfolio {
-	margin-top: 100px;
-}
-
-#portfolio h2 {
-	text-align: center;
-	margin-bottom: 40px;
-}
-
-.filters {
-	display: flex;
-	justify-content: center;
-	gap: 15px;
-	margin-bottom: 45px;
-}
-
-.filters button {
-	border: solid 1px #1D6154;
-	background-color: transparent;
-	border-radius: 60px;
-	color: #1D6154;
-	font-family: 'Syne';
-	font-weight: 700;
-	padding: 9px 22px;
-	cursor: pointer;
-}
-
-.filters button.active {
-	background-color: #1D6154;
-	color: rgb(255,255,255);
-
-}
-.gallery {
-	width: 100%;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
-}
-
-.gallery img {
-	width: 100%;
-
-}
-
-#contact {
-	width: 50%;
-	margin: auto;
-}
-#contact > * {
+#login > * {
 	text-align: center;
 
 }
-#contact h2{
+#login h2{
 	margin-bottom: 20px;
 }
-#contact form {
+#login form {
 	text-align: left;
 	margin-top:30px;
 	display: flex;
 	flex-direction: column;
 }
 
-#contact input {
+#login input {
 	height: 50px;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-#contact label {
+#login label {
 	margin: 2em 0 1em 0;
 }
-#contact textarea {
+#login textarea {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
@@ -233,6 +160,11 @@ input[type="submit"]{
 	width: 180px;
 	text-align: center;
 	border-radius: 60px ;
+}
+
+#login a {
+    color: #3D3D3D;
+    font-size: 0.875em;
 }
 
 footer {
