--- a/FrontEnd/assets/login.css
+++ b/FrontEnd/assets/login.css
@@ -69,7 +69,7 @@ main {
 	height: 100%;
 }
 
-h1 {
+h1 a {
 	display: flex;
 	flex-direction: column;
 	font-family: 'Syne';
@@ -77,10 +77,10 @@ h1 {
 	font-weight: 800;
 	color: #B1663C;
     gap: 7px;
-    
+	text-decoration: none;
 }
 
-h1 > span {
+h1 a span {
 	font-family: 'Work Sans';
 	font-size:10px;
 	letter-spacing: 0.1em;
