--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -84,7 +84,7 @@ section {
 	margin: 50px 0;
 }
 
-h1 {
+h1 a {
 	display: flex;
 	flex-direction: column;
 	font-family: 'Syne';
@@ -92,9 +92,10 @@ h1 {
 	font-weight: 800;
 	color: #B1663C;
 	gap: 7px;
+	text-decoration: none;
 }
 
-h1 > span {
+h1 a span {
 	font-family: 'Work Sans';
 	font-size: 10px;
 	letter-spacing: 0.1em;
