--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -123,10 +123,11 @@ nav li {
 
 nav li a {
 	text-decoration: none;
+	color: #000000;
 }
 
 nav li a:visited {
-	color: inherit;
+	color: #000000;
 }
 
 nav li a:hover {
