--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -317,15 +317,21 @@ nav li a:hover {
 	width: 100%;
 }
 
+#modal form {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
 #modal .add-photo-container {
 	background-color: #E8F1F6;
-	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	padding: 20px 0;
 	gap: 7px;
 	margin-top: 40px;
+	margin-bottom: 10px;
 }
 
 #modal .visually-hidden {
@@ -345,7 +351,39 @@ nav li a:hover {
 	font-size: 10px;
 }
 
+#modal .inputs-title-and-category {
+	display: flex;
+	flex-direction: column;
+	padding-bottom: 40px;
+	border-bottom: 1px solid #B3B3B3;
+	margin-bottom: 30px;
+}
 
+#modal .title-label, .category-label {
+	font-family: "Work Sans";
+	margin-top: 20px;
+	margin-bottom: 10px;
+}
+
+#modal #title, #category {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+#modal .modal-add-photo button {
+	border: solid 1px #A7A7A7;
+	background-color: #A7A7A7;
+	border-radius: 60px;
+	color: #FFFFFF;
+	font-family: 'Syne';
+	font-weight: 700;
+	padding: 9px 40px;
+	cursor: pointer;
+	width: 50%;
+	margin: 0 auto 10px;
+}
 
 #contact {
 	width: 50%;
