--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -328,10 +328,12 @@ nav li a:hover {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 20px 0;
-	gap: 7px;
+	justify-content: center;
+	gap: 3px;
 	margin-top: 40px;
 	margin-bottom: 10px;
+	height: 169px;
+	box-sizing: border-box;
 }
 
 #modal .visually-hidden {
@@ -349,6 +351,17 @@ nav li a:hover {
 #modal .add-photo-container p {
 	color: #444444;
 	font-size: 10px;
+	margin-top: 4px;
+}
+
+#modal .photo-preview {
+	width: 40%;
+	height: 169px;
+	object-fit: cover;
+}
+
+#modal .modal-add-photo .error-message {
+	color: red;
 }
 
 #modal .inputs-title-and-category {
@@ -370,6 +383,9 @@ nav li a:hover {
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	font-family: "Work Sans";
+	font-weight: 400;
+	font-size: 14px;
 }
 
 #modal .modal-add-photo button {
