--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -221,7 +221,7 @@ nav li a:hover {
 
 .gallery img {
 	width: 100%;
-
+	max-height: 404.8px;
 }
 
 #modal {
@@ -280,6 +280,7 @@ nav li a:hover {
 
 #modal .modal-gallery-photos .photo-gallery {
 	width: 100%;
+	height: 101.41px;
 }
  
 #modal .photo-containeur {
@@ -323,7 +324,8 @@ nav li a:hover {
 	flex-direction: column;
 }
 
-#modal .add-photo-container {
+
+#modal .add-photo-container .dropzone-empty {
 	background-color: #E8F1F6;
 	display: flex;
 	flex-direction: column;
@@ -335,6 +337,20 @@ nav li a:hover {
 	height: 169px;
 	box-sizing: border-box;
 }
+
+#modal .add-photo-container .dropzone-full {
+	justify-content: center;
+	background-color: #E8F1F6;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin-top: 40px;
+	margin-bottom: 10px;
+	height: 169px;
+	box-sizing: border-box;
+}
+
 
 #modal .visually-hidden {
 	height: 0px;
