--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -398,10 +398,17 @@ nav li a:hover {
 	height: 50px;
 	font-size: 1.2em;
 	border: none;
+	outline: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 	font-family: "Work Sans";
 	font-weight: 400;
 	font-size: 14px;
+}
+
+#modal .message-input-title {
+	color: red;
+	font-size: 12px;
+	margin-top: 4px;
 }
 
 #modal .validate-btn {
@@ -423,7 +430,10 @@ nav li a:hover {
 	cursor: pointer;
 }
 
-
+#modal .message {
+	color:#0ab133;
+	margin: 10px auto;
+}
 
 #contact {
 	width: 50%;
