--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -362,6 +362,7 @@ nav li a:hover {
 	border-radius: 50px;
 	padding: 12px 30px;
 	color: #306685;
+	cursor: pointer;
 }
 
 #modal .add-photo-container p {
