--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -430,8 +430,13 @@ nav li a:hover {
 	cursor: pointer;
 }
 
-#modal .message {
+#modal .success-message {
 	color:#0ab133;
+	margin: 10px auto 0;
+}
+
+#modal .unsuccess-message {
+	color: red;
 	margin: 10px auto 0;
 }
 
